--- a/index.html
+++ b/index.html
@@ -3,29 +3,29 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ハンドルネームのポートフォリオ</title>
+    <title>メンタンピンのポートフォリオ</title>
   </head>
   <body>
-    <h1>ハンドルネーム</h1>
+    <h1>メンタンピン</h1>
 
     <h2>About</h2>
     <p>
-      簡単な自己紹介やアピール。<br>
-      どんなことができる、したいのか。
+      メンタンピンです。ドラ1満貫あります。高打点です。<br>
+      
     </p>
 
     <h3>Profile</h3>
     <ul>
-      <li>名前（ハンドルネームも可）</li>
-      <li>所在地（県や市までで OK）</li>
-      <li>得意領域（Web 開発、サーバ運用など）</li>
+      <li>メンタンピンドラ1</li>
+      <li>全自動雀卓</li>
+      <li>平和</li>
     </ul>
 
     <h3>Skills</h3>
     <table>
       <tr>
         <th>OS</th>
-        <td>Windows, Ubuntu など</td>
+        <td>mac</td>
       </tr>
       <tr>
         <th>Engine, Frameworks</th>
